tests/compile-fail/stacked_borrows/illegal_read1.stderr
error: Undefined Behavior: attempting a read access using <BORROW_IDX> at ALLOC[$HEX], but that tag does not exist in the borrow stack for this location
  --> $DIR/illegal_read1.rs:LL:CC
   |
LL |     let _val = *xref; // ...but any use of raw will invalidate our ref.
   |                ^^^^^
   |                |
   |                attempting a read access using <BORROW_IDX> at ALLOC[$HEX], but that tag does not exist in the borrow stack for this location
   |                this error occurs as part of an access at ALLOC[$HEX..$HEX]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: <BORROW_IDX> was created by a retag at offsets [$HEX..$HEX]
  --> $DIR/illegal_read1.rs:LL:CC
   |
LL |     let xref = unsafe { &mut *xraw }; // derived from raw, so using raw is still ok...
   |                         ^^^^^^^^^^
help: <BORROW_IDX> was later invalidated at offsets [$HEX..$HEX]
  --> $DIR/illegal_read1.rs:LL:CC
   |
LL |     let _val = unsafe { *xraw };
   |                         ^^^^^
   = note: inside `main` at $DIR/illegal_read1.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

